Bug 1915265 - Fix VP9 color info detection r=media-playback-reviewers,padenot

Differential Revision: https://phabricator.services.mozilla.com/D220440